# NanoTest-JUCE

./: CMakeLists.txt  README.md  Tests.cpp
.github/workflows/: ci.yml
Modules/custom_module/: custom_module.cpp  custom_module.h
Tests/: CMakeLists.txt  CustomModuleTests.cpp  EventTests.cpp
